--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.38.0
+streamlit
 # pandas==2.2.2
 # numpy==1.26.4
-python-docx==1.1.2
-mammoth==1.8.0
-openpyxl==3.1.2
+python-docx
+mammoth
+openpyxl
